--- a/src/main/resources/master/play-field-view.fxml
+++ b/src/main/resources/master/play-field-view.fxml
@@ -4,9 +4,15 @@
 <?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.shape.*?>
+<?import javafx.scene.text.*?>
 
-<AnchorPane fx:id="playFieldPane" onKeyPressed="#keyDispatcher" prefHeight="487.0" prefWidth="368.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.PlayFieldController">
+<AnchorPane fx:id="playFieldPane" onKeyPressed="#keyDispatcher" prefHeight="487.0" prefWidth="368.0" style="-fx-background-color: black;" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.PlayFieldController">
    <children>
+      <Label fx:id="scoreLabel" layoutX="30.0" layoutY="5.0" text="0" textFill="WHITE">
+         <font>
+            <Font name="SimSun" size="25.0" />
+         </font>
+      </Label>
       <ImageView fitHeight="411.0" fitWidth="375.0" layoutY="38.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../images/Pacman_Labyrynth.png" />
@@ -81,7 +87,7 @@
             <Pane fx:id="corner271111111112111212111111111111111" layoutX="325.0" layoutY="348.0" prefHeight="1.0" prefWidth="1.0" />
             <Pane fx:id="corner2711111111121112121111111111111111" layoutX="325.0" layoutY="388.0" prefHeight="1.0" prefWidth="1.0" />
          </children></Pane>
-      <Pane fx:id="wallsPane" prefHeight="487.0" prefWidth="373.0">
+      <Pane fx:id="wallsPane" prefHeight="487.0" prefWidth="373.0" visible="false">
          <children>
             <Rectangle fx:id="wall1" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="42.0" layoutX="100.0" layoutY="249.0" stroke="BLACK" strokeType="INSIDE" width="13.0" />
             <Rectangle fx:id="wall2" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="42.0" layoutX="259.0" layoutY="249.0" stroke="BLACK" strokeType="INSIDE" width="13.0" />
@@ -1362,7 +1368,8 @@
             </Pane>
          </children>
       </Pane>
-      <ImageView fx:id="pacmanImage" disable="true" fitHeight="23.0" fitWidth="23.0" layoutX="175.0" layoutY="180.0" pickOnBounds="true" preserveRatio="true" visible="false">
+      <Pane fx:id="ghostsPane" prefHeight="487.0" prefWidth="373.0" />
+      <ImageView fx:id="pacmanImage" disable="true" fitHeight="23.0" fitWidth="23.0" layoutX="275.0" layoutY="299.0" pickOnBounds="true" preserveRatio="true" visible="false">
          <image>
             <Image url="@../images/Red_Ghost.png" />
          </image></ImageView>
