--- a/src/main/resources/master/play-field-view.fxml
+++ b/src/main/resources/master/play-field-view.fxml
@@ -87,7 +87,7 @@
             <Pane fx:id="corner271111111112111212111111111111111" layoutX="325.0" layoutY="348.0" prefHeight="1.0" prefWidth="1.0" />
             <Pane fx:id="corner2711111111121112121111111111111111" layoutX="325.0" layoutY="388.0" prefHeight="1.0" prefWidth="1.0" />
          </children></Pane>
-      <Pane fx:id="wallsPane" prefHeight="487.0" prefWidth="373.0" visible="false">
+      <Pane fx:id="wallsPane" prefHeight="487.0" prefWidth="373.0">
          <children>
             <Rectangle fx:id="wall1" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="42.0" layoutX="100.0" layoutY="249.0" stroke="BLACK" strokeType="INSIDE" width="13.0" />
             <Rectangle fx:id="wall2" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="42.0" layoutX="259.0" layoutY="249.0" stroke="BLACK" strokeType="INSIDE" width="13.0" />
@@ -113,11 +113,11 @@
             <Rectangle fx:id="wall1011" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="32.0" layoutX="204.0" layoutY="274.0" rotate="90.0" stroke="BLACK" strokeType="INSIDE" width="13.0" />
             <Rectangle fx:id="wall61" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="32.0" layoutX="179.0" layoutY="300.0" stroke="BLACK" strokeType="INSIDE" width="14.0" />
             <Rectangle fx:id="wall611" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="32.0" layoutX="124.0" layoutY="314.0" rotate="90.0" stroke="BLACK" strokeType="INSIDE" width="13.0" />
-            <Rectangle fx:id="wall6111" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="32.0" layoutX="232.0" layoutY="314.0" rotate="90.0" stroke="BLACK" strokeType="INSIDE" width="13.0" />
+            <Rectangle fx:id="wall6111" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="32.0" layoutX="232.0" layoutY="313.0" rotate="90.0" stroke="BLACK" strokeType="INSIDE" width="13.0" />
             <Rectangle fx:id="wall6112" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="20.0" layoutX="42.0" layoutY="320.0" rotate="90.0" stroke="BLACK" strokeType="INSIDE" width="13.0" />
             <Rectangle fx:id="wall61121" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="32.0" layoutX="60.0" layoutY="340.0" stroke="BLACK" strokeType="INSIDE" width="13.0" />
-            <Rectangle fx:id="wall61122" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="20.0" layoutX="315.0" layoutY="320.0" rotate="90.0" stroke="BLACK" strokeType="INSIDE" width="13.0" />
-            <Rectangle fx:id="wall611211" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="32.0" layoutX="299.0" layoutY="340.0" stroke="BLACK" strokeType="INSIDE" width="13.0" />
+            <Rectangle fx:id="wall61122" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="25.0" layoutX="315.0" layoutY="317.0" rotate="90.0" stroke="BLACK" strokeType="INSIDE" width="13.0" />
+            <Rectangle fx:id="wall611211" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="32.0" layoutX="300.0" layoutY="340.0" stroke="BLACK" strokeType="INSIDE" width="13.0" />
             <Rectangle fx:id="wall61123" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="20.0" layoutX="10.0" layoutY="360.0" rotate="90.0" stroke="BLACK" strokeType="INSIDE" width="13.0" />
             <Rectangle fx:id="wall611231" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="20.0" layoutX="345.0" layoutY="360.0" rotate="90.0" stroke="BLACK" strokeType="INSIDE" width="13.0" />
             <Rectangle fx:id="wall611212" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="32.0" layoutX="100.0" layoutY="368.0" stroke="BLACK" strokeType="INSIDE" width="14.0" />
@@ -1369,9 +1369,5 @@
          </children>
       </Pane>
       <Pane fx:id="ghostsPane" prefHeight="487.0" prefWidth="373.0" />
-      <ImageView fx:id="pacmanImage" disable="true" fitHeight="23.0" fitWidth="23.0" layoutX="275.0" layoutY="299.0" pickOnBounds="true" preserveRatio="true" visible="false">
-         <image>
-            <Image url="@../images/Red_Ghost.png" />
-         </image></ImageView>
    </children>
 </AnchorPane>
