--- a/src/main/resources/master/play-field-view.fxml
+++ b/src/main/resources/master/play-field-view.fxml
@@ -113,13 +113,13 @@
             <Rectangle fx:id="wall1011" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="32.0" layoutX="204.0" layoutY="274.0" rotate="90.0" stroke="BLACK" strokeType="INSIDE" width="13.0" />
             <Rectangle fx:id="wall61" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="32.0" layoutX="179.0" layoutY="300.0" stroke="BLACK" strokeType="INSIDE" width="14.0" />
             <Rectangle fx:id="wall611" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="32.0" layoutX="124.0" layoutY="314.0" rotate="90.0" stroke="BLACK" strokeType="INSIDE" width="13.0" />
-            <Rectangle fx:id="wall6111" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="32.0" layoutX="232.0" layoutY="313.0" rotate="90.0" stroke="BLACK" strokeType="INSIDE" width="13.0" />
+            <Rectangle fx:id="wall6111" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="32.0" layoutX="232.0" layoutY="314.0" rotate="90.0" stroke="BLACK" strokeType="INSIDE" width="13.0" />
             <Rectangle fx:id="wall6112" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="20.0" layoutX="42.0" layoutY="320.0" rotate="90.0" stroke="BLACK" strokeType="INSIDE" width="13.0" />
             <Rectangle fx:id="wall61121" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="32.0" layoutX="60.0" layoutY="340.0" stroke="BLACK" strokeType="INSIDE" width="13.0" />
             <Rectangle fx:id="wall61122" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="25.0" layoutX="315.0" layoutY="317.0" rotate="90.0" stroke="BLACK" strokeType="INSIDE" width="13.0" />
             <Rectangle fx:id="wall611211" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="32.0" layoutX="300.0" layoutY="340.0" stroke="BLACK" strokeType="INSIDE" width="13.0" />
             <Rectangle fx:id="wall61123" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="20.0" layoutX="10.0" layoutY="360.0" rotate="90.0" stroke="BLACK" strokeType="INSIDE" width="13.0" />
-            <Rectangle fx:id="wall611231" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="20.0" layoutX="345.0" layoutY="360.0" rotate="90.0" stroke="BLACK" strokeType="INSIDE" width="13.0" />
+            <Rectangle fx:id="wall611231" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="20.0" layoutX="345.0" layoutY="359.0" rotate="90.0" stroke="BLACK" strokeType="INSIDE" width="13.0" />
             <Rectangle fx:id="wall611212" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="32.0" layoutX="100.0" layoutY="368.0" stroke="BLACK" strokeType="INSIDE" width="14.0" />
             <Rectangle fx:id="wall6112121" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="32.0" layoutX="259.0" layoutY="368.0" stroke="BLACK" strokeType="INSIDE" width="14.0" />
             <Rectangle fx:id="wall6113" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="32.0" layoutX="153.0" layoutY="353.0" rotate="90.0" stroke="BLACK" strokeType="INSIDE" width="13.0" />
@@ -1369,5 +1369,10 @@
          </children>
       </Pane>
       <Pane fx:id="ghostsPane" prefHeight="487.0" prefWidth="373.0" />
+      <Label fx:id="scoreLabel1" layoutX="323.0" layoutY="5.0" text="0" textFill="WHITE" visible="false">
+         <font>
+            <Font name="SimSun" size="25.0" />
+         </font>
+      </Label>
    </children>
 </AnchorPane>
