--- a/src/main/resources/master/menu-view.fxml
+++ b/src/main/resources/master/menu-view.fxml
@@ -9,22 +9,27 @@
    <children>
       <VBox alignment="TOP_CENTER" layoutX="250.0" layoutY="100.0" prefHeight="200.0" prefWidth="100.0">
          <children>
-            <Button mnemonicParsing="false" text="Singleplayer" onAction="#startSingleplayer">
+            <Button mnemonicParsing="false" onAction="#startSingleplayer" text="Singleplayer">
                <VBox.margin>
                   <Insets bottom="15.0" />
                </VBox.margin>
             </Button>
-            <Button mnemonicParsing="false" text="Co-op as host" onAction="#startAsHost">
+            <Button mnemonicParsing="false" onAction="#startAsHost" text="Co-op as host">
                <VBox.margin>
                   <Insets bottom="15.0" />
                </VBox.margin>
             </Button>
-            <Button mnemonicParsing="false" text="Co-op as guest" onAction="#startAsGuest">
+            <Button mnemonicParsing="false" onAction="#startAsGuest" text="Co-op as guest">
                <VBox.margin>
                   <Insets bottom="15.0" />
                </VBox.margin>
             </Button>
-            <Button mnemonicParsing="false" text="Exit" onAction="#exit"/>
+            <Button mnemonicParsing="false" onAction="#leaderboardView" text="Leaderboard">
+               <VBox.margin>
+                  <Insets bottom="15.0" />
+               </VBox.margin>
+            </Button>
+            <Button mnemonicParsing="false" onAction="#exit" text="Exit" />
          </children>
       </VBox>
       <VBox alignment="TOP_CENTER" layoutX="250.0" layoutY="334.0" prefHeight="52.0" prefWidth="100.0">
@@ -34,12 +39,13 @@
                   <Insets bottom="10.0" />
                </padding>
             </Label>
-            <Label text="Label" fx:id="ipAddress">
+            <Label fx:id="ipAddress" text="Label">
                <font>
                   <Font name="System Bold" size="12.0" />
                </font>
             </Label>
          </children>
       </VBox>
+      <TextField fx:id="hostIPAddress" layoutX="226.0" layoutY="300.0" promptText="Host IP Address" />
    </children>
 </AnchorPane>
